--- a/src/input.css
+++ b/src/input.css
@@ -21,8 +21,17 @@
 }
 
  @layer utilities{
-    .home__title{
+    .home__title,
+    .card__title,
+    .section__title{
         @apply text-4xl font-oswald font-bold uppercase lg:text-6xl
+    }
+    .card__title{
+        @apply text-xl;
+
+    }
+    .section__title{
+        @apply text-3xl;
     }
     .separator{
         @apply w-28 h-[2px] bg-secondaryColor my-5;
