--- a/src/input.css
+++ b/src/input.css
@@ -4,8 +4,11 @@
 @tailwind utilities;
 
  @layer base{
+    html{
+        @apply scroll-smooth;
+    }
     body{
-        @apply text-whiteColor bg-primaryColor tracking-wider font-dmsans;
+        @apply text-whiteColor bg-primaryColor tracking-wider font-dmsans dark:bg-darkColor;
     }
     section{
         @apply pt-16 pb-4 md:pt-20;
